--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "prettier": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
-    "typescript": "^5.2.2",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "rimraf": "^5.0.5"
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -63,5 +63,8 @@
   "bugs": {
     "url": "https://github.com/devapi-team/devapi-manager/issues"
   },
-  "homepage": "https://github.com/devapi-team/devapi-manager#readme"
+  "homepage": "https://github.com/devapi-team/devapi-manager#readme",
+  "dependencies": {
+    "sharp": "^0.34.3"
+  }
 }
