--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "dev:http": "tsx watch src/startHttpServer.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:http": "node dist/startHttpServer.js",
     "clean": "rimraf dist",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
