--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "db:setup": "npm run db:push --workspace=packages/backend",
     "db:migrate": "npm run db:migrate --workspace=packages/backend",
     "db:generate": "npm run db:generate --workspace=packages/backend",
-    "postinstall": "npm run db:generate --workspace=packages/backend",
+    "_postinstall": "npm run db:generate --workspace=packages/backend",
     "type-check": "npm run type-check --workspaces",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\""
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "prisma": "^5.22.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   },
