--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,36 +26,40 @@
   },
   "dependencies": {
     "@devapi/shared": "file:../shared",
-    "@prisma/client": "^5.6.0",
-    "express": "^4.18.2",
+    "@prisma/client": "^5.22.0",
+    "axios": "^1.6.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "zod": "^3.22.4",
-    "swagger-parser": "^10.0.3",
-    "axios": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "express-rate-limit": "^7.1.5",
-    "compression": "^1.7.4",
-    "express-validator": "^7.0.1"
+    "swagger-parser": "^10.0.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-winston": "^3.0.4",
+    "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/compression": "^1.7.5",
     "@types/node": "^20.9.0",
-    "@types/jest": "^29.5.8",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.2.2",
-    "tsx": "^4.1.4",
-    "tsc-alias": "^1.8.8",
-    "rimraf": "^5.0.5",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "prisma": "^5.22.0",
+    "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
-    "prisma": "^5.6.0"
+    "ts-jest": "^29.1.1",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.1.4",
+    "typescript": "^5.2.2"
   }
 }
