fix(mcp-server): 修复数据库路径并添加Prisma客户端依赖
- 修正.env.development中的数据库路径配置
- 在package.json中添加@prisma/client依赖
- 创建test-db.js用于测试数据库连接
- 更新index.ts中使用Prisma客户端的初始化方式
- 添加CLAUDE.md文档说明项目架构和开发指南

--- a/packages/mcp-server/.env.development
+++ b/packages/mcp-server/.env.development
@@ -1,5 +1,5 @@
 # Database - use the backend database directly
-DATABASE_URL="file:../../packages/backend/prisma/dev.db"
+DATABASE_URL="file:../backend/prisma/dev.db"
 
 # Development
 NODE_ENV=development
