--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -22,15 +22,17 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "7zip-bin": "^5.2.0",
+    "app-builder-bin": "^4.2.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "concurrently": "^8.2.2",
     "electron": "27.1.3",
     "electron-builder": "^24.6.4",
-    "typescript": "^5.2.2",
-    "concurrently": "^8.2.2"
+    "typescript": "^5.2.2"
   },
   "build": {
     "appId": "com.devapi.manager",
@@ -47,14 +49,18 @@
       {
         "from": "../frontend/dist",
         "to": "frontend",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "requestedExecutionLevel": "asInvoker"
@@ -63,7 +69,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "category": "public.app-category.developer-tools"
@@ -72,7 +81,9 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "category": "Development"
