--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
+    "fuse.js": "^7.1.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
