feat: 重构数据库模块并优化桌面应用功能
refactor(database): 将数据库模块重构为独立包，统一后端和MCP服务器的Prisma客户端
feat(desktop): 添加桌面应用开发脚本和测试工具
fix(frontend): 修复Electron环境下的路由和布局问题
style: 统一代码格式和注释风格
docs: 更新配置文件和测试脚本的文档
test: 添加全面的测试脚本验证修复

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:backend": "npm run dev --workspace=packages/backend",
     "dev:frontend": "npm run dev --workspace=packages/frontend",
     "dev:mcp": "npm run dev --workspace=packages/mcp-server",
+    "dev:desktop": "npm run dev --workspace=packages/desktop",
     "start": "node start-dev.js",
     "build": "npm run build --workspaces",
     "build:backend": "npm run build --workspace=packages/backend",
