--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -17,7 +17,7 @@
     "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@devapi/backend": "file:../backend",
+    "@devapi/database": "file:../database",
     "@devapi/shared": "file:../shared",
     "@huggingface/transformers": "^3.7.0",
     "@modelcontextprotocol/sdk": "^0.5.0",
